# tradingview-mcp-custom

./: .gitignore  pyproject.toml
tradingview_mcp/: server.py
tradingview_mcp/coinlist/: mai.txt
tradingview_mcp/core/services/: set_chart_service.py  set_financial_service.py
tradingview_mcp/core/utils/: validators.py
