[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradingview-mcp-server"
version = "0.7.1.post1"
description = "Fork of tradingview-mcp-server with SET Thailand enhancements"
requires-python = ">=3.10"
dependencies = [
    "feedparser>=6.0.12",
    "mcp[cli]>=1.12.0",
    "playwright>=1.44.0",
    "tradingview-screener>=0.6.4",
    "tradingview-ta>=3.3.0",
]

[project.scripts]
tradingview-mcp = "tradingview_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["tradingview_mcp"]
